--- a/Assignment 1/Assignment 1/style.css
+++ b/Assignment 1/Assignment 1/style.css
@@ -1,64 +1,336 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
-
+@font-face {
+  font-family: "Mangueira Regular";
+  src: url("fonts/Mangueira-regular.otf") format("truetype");
+}
+@font-face {
+  font-family: "tt";
+  src: url("fonts/TTRegular.otf") format("truetype");
+}
+@font-face {
+  font-family: "Estilo";
+  src: url("fonts/EstiloRegular.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Today";
+  src: url("fonts/TodaySBLight.otf") format("truetype");
+}
+@font-face {
+  font-family: "Room thin";
+  src: url("fonts/RoomThin.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Arial Greek Regular";
+  src: url("fonts/ArialGreekRegular.ttf") format("truetype");
+}
+.symbol {
+  font-family: Arial, Helvetica, sans-serif;
+}
 .main {
-    padding: 2rem 15rem ;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 2rem 17rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.menu{
-    font: size 70%;
+.menu {
+  font: size 70%;
+  font-family: "Mangueira regular";
+  text-decoration: none;
 }
-
-.others{
-    
-    gap: 2rem;
-   display: flex;
-    font-size: 60%;
+.others {
+  gap: 2rem;
+  display: flex;
+  font-size: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
-
- /* .lawyer{
-    width: 100%;
-    height: 800px;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: -200;
-    bottom: -600px;
-}  */
-
+.others a{
+  text-decoration: none;
+  color: rgb(188, 184, 184);
+}
+.others a:hover{
+  color: black;
+}
 .hero {
-    overflow: hidden;
-    height: 675px;
-    position: relative;
+  overflow: hidden;
+  height: 675px;
+  position: relative;
 }
 .lawyer {
-    top: 0;
-    position: absolute;
-    bottom: -210px;
-    width: 100%;
-    height: auto;
+  top: 0;
+  position: absolute;
+  bottom: 210px;
+  width: 100%;
+  height: auto;
+  filter: brightness(75%);
 }
-.content{
-    padding: 2rem;
-    position: absolute;
-    margin-left: 17%;
-    margin-top: 10%;
-    height: 330px;
-    background-color: rgb(27, 59, 91);
-    color: white;
-    padding: 30px;
-    width: 300px;
-    text-align: left;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-
-
-    
+.content {
+  line-height: 1.1;
+  padding: 2rem;
+  position: absolute;
+  margin-left: 17%;
+  margin-top: 10%;
+  height: 330px;
+  background-color: rgb(27, 59, 91);
+  color: white;
+  padding: 30px;
+  width: 300px;
+  text-align: left;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-.improve{
-    font-size: 200%;
-    position: relative;
+.dont {
+  padding-top: 2rem;
+  padding-left: 1rem;
+  padding-bottom: 0.5rem;
+  margin: 0;
+  font-size: 15px;
+  font-family: "Room thin";
+}
+.improve {
+  padding-left: 1rem;
+  margin: 0px;
+  font-size: 200%;
+  position: relative;
+  font-family: "Mangueira regular";
+}
+.get {
+  padding-left: 1rem;
+  color: #ffcc00;
+  font-size: 13px;
+  font-family: Arial, open-sans;
+  font-style: italic;
+  font-weight: 700;
+}
+.text {
+  margin-left: 1rem;
+  font-size: 35px;
+}
+.signup {
+  background-color: #ffcc00;
+  font-family: "Mangueira regular";
+  padding: 14px;
+  width: 50%;
+  border: none;
+  cursor: pointer;
+  margin-left: 1rem;
+  font-size: 9px;
+  letter-spacing: 1.75px;
+  text-align: center;
+}
+.features {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10rem;
+  padding-left: 13rem;
+  padding-right: 13rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.fcontent {
+  font-size: 12px;
+  line-height: 18px;
+  color: gray;
+}
+.title {
+  font-family: "Mangueira Regular", open-sans;
+}
+.killerapp {
+  background-color: rgb(244, 244, 244);
+  margin: 0;
+  padding: 10rem;
+}
+.icouldnt {
+  justify-content: center;
+  display: flex;
+  font-family: "Today";
+  font-size: 20px;
+  margin-bottom: 0%;
+}
+.johndoeceo {
+  margin-top: 0;
+  padding-top: 0%;
+  display: flex;
+  justify-content: center;
+  font-size: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.john {
+  font-weight: bold;
+}
+.ceo {
+  color: grey;
+}
+.prices {
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
+  min-height: 100vh;
+  align-items: center;
+  padding-top: 3rem;
+  text-align: center;
+  font-family: "Mangueira Regular", open-sans;
+}
+.price-title {
+  font-size: 20px;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+}
+.price-sub {
+  font-family: "tt";
+  color: gray;
+  margin-top: 0%;
+  padding-top: 0.5rem;
+  font-size: 12px;
+}
+.plans {
+  display: flex;
+  padding-top: 2rem;
+  padding-left: 15rem;
+  padding-right: 15rem;
+  justify-content: space-between;
+}
+.prices::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.7),rgba(255, 255, 255, 0.7)),url(images/glasses.png);
+  filter: grayscale(100%);
+  background-position: center;
+  background-size: cover;
+  z-index: -1;
+}
+.plan-box {
+  background-color: white;
+  background-image:
+    linear-gradient(90deg, rgba(135, 115, 115, 0.15) 1px, transparent 1px),
+    linear-gradient(180deg, rgba(157, 155, 155, 0.15) 1px, transparent 1px),
+    linear-gradient( 45deg, transparent 16px, #dcdcdc 16px, #dcdcdc 17px, transparent 17px),
+    linear-gradient(-45deg, transparent 16px, #dcdcdc 16px, #dcdcdc 17px, transparent 17px);
+  background-size: 25px 25px ;
+  padding: 10px;
+  text-align: center;
+  min-width: 300px;
+  min-height: 475px;
+  margin: 10px;
+}
+.plan-box h3 {
+  font-size: 14px;
+  font-weight: lighter;
+  padding-top: 2.5rem;
+}
+.plan-box p {
+  font-family: "tt";
+  color: rgb(68, 68, 68);
+  font-size: 12px;
+  padding-top: 0.5rem;
+}
+.plan-box .price {
+  font-size: 28px;
+  margin: 20px 0;
+  padding-top: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.plan-box .btn-buy {
+  display: inline-block;
+  padding: 20px 40px;
+  background-color: #002855;
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: "Room thin";
+}
+.try {
+  font-family: "Mangueira Regular";
+  position: relative;
+  height: 450px;
+  overflow: hidden;
+}
+.imgssss {
+  position: absolute;
+  z-index: -1;
+}
+.imgssss img {
+  margin-top: -275px;
+  width: 100%;
+}
+.imgssss::before {
+  background-color: rgb(20, 60, 92, 0.88);
+  width: 100%;
+  height: 500px;
+  position: absolute;
+  content: "";
+}
+.text-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+}
+.tryheading {
+  margin-top: 0%;
+  padding-top: 0;
+  font-size: 24px;
+  color: white;
+  margin-bottom: 10px;
+  font-family: "Room thin";
+  font-weight: bold;
+}
+.amazingsoftware {
+  margin-top: 0;
+  font-size: 10px;
+  color: white;
+  margin-bottom: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+.btn-try {
+  background-color: #ffc107;
+  color: black;
+  padding: 15px 40px;
+  text-decoration: none;
+  font-family: "Room thin";
+  font-size: 12.5px;
+}
+.footer {
+  overflow: hidden;
+  background-color: #1f252f;
+  color: white;
+}
+.foothead {
+  display: flex;
+  justify-content: center;
+  padding-top: 5rem;
+  font-size: 18px;
+  font-family: "Room thin";
+  font-weight: bold;
+}
+.footcontent {
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: #b1b1b1;
+}
+.socials {
+  display: flex;
+  padding-top: 1rem;
+  padding-left: 40rem;
+  padding-right: 40rem;
+  padding-bottom: 5rem;
+  justify-content: center;
+  height: 30px;
+  justify-content: space-between;
 }
